Importacion de librerias actualizacion funcionalidad de pagina

--- a/FrontEnd/style/styles.css
+++ b/FrontEnd/style/styles.css
@@ -1,14 +1,6 @@
-body {
-    background-color: #28B15C;
+.bodyindex {
+    background-color: rgb(40, 177, 92);
     cursor: url(/FrontEnd/img/cursor.png), auto;
 }
 
-img {
-    height: 200px;
-    width: 260px;
-}
 
-.titulo {
-    font-size: 100px;
-    text-align: center;
-}
