Features aparicion topos

--- a/FrontEnd/style/styles.css
+++ b/FrontEnd/style/styles.css
@@ -1,6 +1,7 @@
 .bodyindex {
     background-color: rgb(40, 177, 92);
-    cursor: url(/FrontEnd/img/cursor.png), auto;
+    cursor: url(../img/cursor.png), auto;
 }
+
 
 
