Arreglado el bug del contador de puntaje, ahora te resta un punto si te equivocas

--- a/FrontEnd/style/styles.css
+++ b/FrontEnd/style/styles.css
@@ -13,5 +13,13 @@
 
 }
 
+/* .topo{
+    background-image: url('../img/Mole-Animal-PNG-HD-Quality.png');
+}
+.none{
+    background-image: none;
+}
 
-
+.fondo {
+    background-image: url(../img/fondoVerde.png);
+} */
